packages/pro/search/style/variables.less
@pro-search-font-size: var(--ix-font-size-sm);

@pro-search-border-width: var(--ix-control-line-width);
@pro-search-border-style: var(--ix-control-line-type);
@pro-search-border-color: var(--ix-color-border);
@pro-search-border-radius: var(--ix-control-border-radius-md);

@pro-search-color: var(--ix-color-text);
@pro-search-background-color: var(--ix-control-bg-color);
@pro-search-placeholder-color: var(--ix-color-text-placeholder);
@pro-search-hover-color: var(--ix-control-border-color-hover);
@pro-search-active-color: var(--ix-control-border-color-active);
@pro-search-active-box-shadow: var(--ix-control-box-shadow-focus);
@pro-search-disabled-color: var(--ix-color-text-disabled);
@pro-search-disabled-background-color: var(--ix-control-bg-color-disabled);

@pro-search-placeholder-padding-horizontal: 12px;

@pro-search-clear-icon-font-size: var(--ix-font-size-icon);
@pro-search-clear-icon-width: var(--ix-font-size-icon);
@pro-search-clear-icon-margin-right: var(--ix-margin-size-sm);
@pro-search-clear-icon-color: var(--ix-color-icon);
@pro-search-clear-icon-color-hover: var(--ix-color-icon-hover);
@pro-search-clear-icon-color-active: var(--ix-color-icon-active);

@pro-search-close-icon-font-size: var(--ix-font-size-icon);
@pro-search-close-icon-color: var(--ix-color-icon);
@pro-search-close-icon-margin-left: 0;
@pro-search-search-button-background-color: var(--ix-pro-search-search-btn-bg-color);
@pro-search-search-button-background-color-hover: var(--ix-pro-search-search-btn-bg-color-hover);
@pro-search-search-button-font-size: var(--ix-font-size-icon);
@pro-search-search-button-color: var(--ix-pro-search-search-btn-color);
@pro-search-search-button-color-hover: var(--ix-pro-search-search-btn-color-hover);
@pro-search-search-button-disabled-background-color: var(--ix-pro-search-search-btn-bg-color-disabled);
@pro-search-search-button-disabled-color: var(--ix-pro-search-search-btn-color-disabled);

@pro-search-item-tag-color: var(--ix-pro-search-tag-color);
@pro-search-item-tag-background-color: var(--ix-pro-search-tag-bg-color);
@pro-search-item-tag-border-radius: 2px;
@pro-search-item-tag-padding: 2px 4px 2px 8px;
@pro-search-item-tag-disabled-border-color: var(--ix-color-border);
@pro-search-item-tag-disabled-color: var(--ix-pro-search-tag-color-disabled);
@pro-search-item-tag-disabled-background-color: var(--ix-pro-search-tag-bg-color-disabled);
@pro-search-item-tag-invalid-border-color: var(--ix-color-error-border);
@pro-search-item-tag-invalid-tooltip-background-color: var(--ix-color-error-bg);
@pro-search-item-tag-invalid-tooltip-color: var(--ix-color-text-inverse);

@pro-search-segment-padding-horizontal: var(--ix-pro-search-segment-padding-horizontal);
@pro-search-segment-margin: var(--ix-margin-size-xs);
@pro-search-segment-max-width: var(--ix-pro-search-segment-max-width);

@pro-search-overlay-padding: 0;

@pro-search-panel-footer-border-width: 1px;
@pro-search-panel-footer-border-style: solid;
@pro-search-panel-footer-border-color: var(--ix-color-separator);
@pro-search-panel-footer-padding-horizontal: 12px;
@pro-search-panel-footer-padding-vertical: 8px;
@pro-search-panel-footer-button-margin: var(--ix-margin-size-md);

@pro-search-date-picker-panel-body-padding: var(--ix-padding-size-lg);

@pro-search-name-segment-panel-min-width: var(--ix-pro-search-name-panel-min-width);
@pro-search-operator-segment-panel-min-width: var(--ix-pro-search-operator-panel-min-width);
@pro-search-select-panel-min-width: var(--ix-pro-search-select-panel-min-width);
@pro-search-tree-select-panel-min-width: var(--ix-pro-search-tree-select-panel-min-width);
@pro-search-tree-select-panel-max-width: var(--ix-pro-search-tree-select-panel-max-width);

